[sveltekit-pod] Fix broken layout for Repository Files View#1266

--- a/svelte-kit-scss/src/routes/styles.scss
+++ b/svelte-kit-scss/src/routes/styles.scss
@@ -72,7 +72,6 @@ a.link-anchor {
     border-collapse: collapse;
     display: block;
     width: 100%;
-    width: max-content;
     max-width: 100%;
     overflow: auto;
 
